<resources>
    <string name="app_name">Android_app</string>
    <string name="Java_name"><a href = "https://itproger.com/intensive/java"> Java разработчик </a> </string>
    <string name="sales_icon">Sales</string>
    <string name="contacts_text">Контакты</string>
    <string name="about_text">Про нас</string>
    <string name="main_text">Главное</string>
    <string name="logo_app_1">Course</string>
    <string name="logo_app_2">Up</string>
    <string name="course_start_date">Старт обучения:</string>
    <string name="course_level">Уровень:</string>
    <string name="course_desc">Программа обучения Джава – рассчитанана новичков в данной сфере.За программу вы изучите построениеграфических приложений под ПК,разработку веб сайтов на основе JavaSpring Boot, изучите построениеполноценных Андроид приложенийи отлично изучите сам язык Джава!</string>


</resources>